RESOLVED FIXED302374
REGRESSION(302861@main): Broke TestWebKitAPI.SafeBrowsing.PhishingInFrame on Sonoma
https://bugs.webkit.org/show_bug.cgi?id=302374
Summary REGRESSION(302861@main): Broke TestWebKitAPI.SafeBrowsing.PhishingInFrame on ...
Jonathan Bedard
Reported 2025-11-11 20:52:56 PST
After 302861@main, TestWebKitAPI.SafeBrowsing.PhishingInFrame started failing. History: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.SafeBrowsing.PhishingInFrame Build: https://build.webkit.org/#/builders/937/builds/10506 Text: TestWebKitAPI.SafeBrowsing.PhishingInFrame 2025-11-11 14:46:46.614 TestWebKitAPI[48306:910727] NSEventConcurrentProcessingEnabled=NO /Volumes/Data/worker/Apple-Sonoma-Release-Build/build/Tools/TestWebKitAPI/Tests/WebKitCocoa/SafeBrowsing.mm:850 Value of: [failingURLString hasSuffix:@"/simple.html"] Actual: false Expected: true
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-11 20:53:08 PST
Jonathan Bedard
Comment 2 2025-11-11 21:01:07 PST
TestWebKitAPI.SafeBrowsing.WKWebViewGoBackIFrame is also impacted: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.SafeBrowsing.WKWebViewGoBackIFrame
Gavin
Comment 3 2025-11-14 05:05:44 PST
EWS
Comment 4 2025-11-14 15:09:06 PST
Committed 303059@main (e7d5a632454e): <https://commits.webkit.org/303059@main> Reviewed commits have been landed. Closing PR #53935 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.