REGRESSION(302861@main): Broke TestWebKitAPI.SafeBrowsing.PhishingInFrame on Sonoma https://bugs.webkit.org/show_bug.cgi?id=302374 rdar://164534162

Reviewed by Abrar Rahman Protyasha.

Adds missing NSURLErrorFailingURLStringErrorKey to serialization of CoreIPCError.

* Source/WebKit/Shared/Cocoa/CoreIPCError.h:
(WebKit::CoreIPCError::CoreIPCError):
* Source/WebKit/Shared/Cocoa/CoreIPCError.mm:
(WebKit::CoreIPCError::toID const):
(WebKit::CoreIPCError::CoreIPCError):
* Source/WebKit/Shared/Cocoa/CoreIPCError.serialization.in:

Canonical link: https://commits.webkit.org/303059@main